# PyFluid

./: LICENSE  README.md  main.ipynb  main_mhd.ipynb  main_mhd2d.ipynb  main_mhd2d_jax.ipynb  main_mhd2d_jax.py  main_mhd_jax.ipynb  pyproject.toml
