[project]
name = "pyfluid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "jax-tqdm>=0.4.0",
    "jax[cuda13]>=0.8.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]
